# oga

./: ProjectHome.md  RoleAndReport.md  configure.ac
cfg/: ogretestmap.cfg  untitled.cfg
src/: GameState.cpp  GameState.h  GameStateGamePlay.h  GameStateManager.cpp  GameStateManager.h  Makefile.am  SinbadCharacterController.h  game.cpp  game.h
trunk/: clean
trunk/cfg/: ogre.cfg  plugin.cfg  quakemap.cfg
trunk/src/: GameState.cpp  GameState.h  GameStateGamePlay.cpp  Makefile.am  OpenGameArch.cpp  OpenGameArch.h
wiki/: RoleAndReport.wiki
