# what flags you want to pass to the C compiler & linker
CFLAGS = -Wall -O2

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = game
game_SOURCES = 	game.cpp game.h\
								GameStateManager.cpp GameStateManager.h\
						 		GameState.cpp GameState.h\
								GameStateGamePlay.cpp GameStateGamePlay.h
